sftp/sftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp
  namespace: sftp
  labels:
    environment: production
spec:
  ports:
  - name: "ssh"
    port: 22
    targetPort: 22
  selector:
    app: sftp

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sftp
  namespace: sftp
  labels:
    environment: production
    app: sftp
spec:
  # how many pods and indicate which strategy we want for rolling update
  replicas: 1
  minReadySeconds: 10

  template:

    metadata:
      labels:
        environment: production
        app: sftp
      annotations:
        container.apparmor.security.beta.kubernetes.io/sftp: runtime/default

    spec:
      #secrets and config
      containers:
        #the sftp server itself
        - name: sftp
          image: atmoz/sftp:latest
          imagePullPolicy: Always
          volumeMounts:
             - name: sftp-data
               mountPath: /home/admin/sftp
          args: ["admin:admin:1001:100"] #create users and dirs
          ports:
            - containerPort: 22
          securityContext:
            capabilities:
              add: ["SYS_ADMIN"]
          resources: {}
      volumes:
      - name: sftp-data
        hostPath:
            path: /var/sftp
            type: Directory
